--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -47,7 +47,7 @@ section aside {
 section img {
   width: 150px;
   height: 150px;
-  border: 2px solid #2563eb;
+  border: 2px solid #86198f;
   border-radius: 50%;
   margin-bottom: 10px;
 }
